infrastructure/03-apps/startpage/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: startpage
  namespace: startpage
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  rules:
    - host: apps.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: startpage
                port:
                  number: 80
  tls:
    - hosts:
        - apps.foobarbaz.fr
      secretName: startpage-tls
